tests/snapshot/inputs/errors/trace_not_saturated.ncl
# capture = 'stderr'
# command = []
%trace% "too few arguments"
